# AudioPlayer

app/: build.gradle
app/src/main/cpp/: AndFFmpeg.h  CMakeLists.txt  MusicDecoder.cpp  SoundTrackController.cpp
app/src/main/java/com/example/musicplayer/: MainActivityMusic.java
app/src/main/java/com/example/musicplayer/audiotrack/: IMusicDecoder.java  MusicDecoder.java  MusicPlayer.java  MusicPlayerController.java
app/src/main/java/com/example/musicplayer/opensles/: SoundTrackController.java
app/src/main/java/com/example/musicplayer/service/: MusicService.java
app/src/main/res/layout/: activity_main_music.xml
app/src/main/res/values/: strings.xml
